One component/subdomain -> one bounded context

--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-courier/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-courier/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+server:
+  port: 8081
 spring:
+  data:
+    rest:
+      base-path: /api/query/courier
   datasource:
     url: jdbc:h2:mem:restaurant
   jpa:
