--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-customer/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-customer/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+server:
+  port: 8082
 spring:
+  data:
+    rest:
+      base-path: /api/query/customer
   datasource:
     url: jdbc:h2:mem:restaurant
   jpa:
