Adding 'monolith2' application
Creating a synchronous REST front-end on an asynchronous CQRS+ES back-end using Axon's subscription queries.

--- a/drestaurant-apps/pom.xml
+++ b/drestaurant-apps/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>drestaurant-monolith</module>
+        <module>drestaurant-monolith2</module>
         <module>drestaurant-microservices</module>
     </modules>
 
