--- a/drestaurant-apps/drestaurant-monolith-websockets/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-monolith-websockets/src/main/resources/application.yml
@@ -8,3 +8,28 @@ spring:
     console:
       enabled: true
       path: /h2-console
+axon:
+  eventhandling:
+    processors:
+      customer:
+        mode: tracking
+      restaurant:
+        mode: tracking
+      order:
+        mode: tracking
+      courier:
+        mode: tracking
+      courierorder:
+        mode: tracking
+      restaurantorder:
+        mode: tracking
+  snapshot:
+    trigger:
+      treshold:
+        order: 100
+        restaurant: 100
+        customer: 100
+        courier: 100
+        customerorder: 100
+        courierorder: 100
+        restaurantorder: 100
