Eventsourcing 'snapshotting' configured for microservices

--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-courier/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-courier/src/main/resources/application.yml
@@ -13,3 +13,13 @@ spring:
     console:
       enabled: true
       path: /h2-console
+axon:
+  eventhandling:
+    processors:
+      courier:
+        mode: tracking
+  snapshot:
+    trigger:
+      treshold:
+        courier: 100
+        courierorder: 100
