--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-customer/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-customer/src/main/resources/application.yml
@@ -13,3 +13,13 @@ spring:
     console:
       enabled: true
       path: /h2-console
+axon:
+  eventhandling:
+    processors:
+      customer:
+        mode: tracking
+  snapshot:
+    trigger:
+      treshold:
+        customer: 100
+        customerorder: 100
