--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-restaurant/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-restaurant/src/main/resources/application.yml
@@ -13,3 +13,13 @@ spring:
     console:
       enabled: true
       path: /h2-console
+axon:
+  eventhandling:
+    processors:
+      restaurant:
+        mode: tracking
+  snapshot:
+    trigger:
+      treshold:
+        restaurant: 100
+        restaurantorder: 100
