--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
                 <version>${kotlin.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>io.axoniq</groupId>
+                <artifactId>axonhub-spring-boot-autoconfigure</artifactId>
+                <version>1.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
