--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <docker.plugin.version>0.4.9</docker.plugin.version>
         <project.scm.id>mygit</project.scm.id>
         <kotlin.version>1.2.41</kotlin.version>
+        <kafka.clients.version>0.11.0.2</kafka.clients.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +59,11 @@
             <dependency>
                 <groupId>org.axonframework</groupId>
                 <artifactId>axon-amqp</artifactId>
+                <version>${axon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-kafka</artifactId>
                 <version>${axon.version}</version>
             </dependency>
             <dependency>
