--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-query/pom.xml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-query/pom.xml
@@ -16,6 +16,19 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>com.drestaurant</groupId>
+            <artifactId>drestaurant-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -52,11 +65,6 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.drestaurant</groupId>
-            <artifactId>drestaurant-restaurant</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
