--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-restaurant/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-restaurant/src/main/resources/application.yml
@@ -16,3 +16,13 @@ axon:
       treshold:
         restaurant: 100
         restaurantorder: 100
+  kafka:
+#    client-id: restaurant-command
+    default-topic: axon-events
+    producer:
+      retries: 5
+      bootstrap-servers: localhost:9092
+      transaction-id-prefix: restauranttx
+    consumer:
+      group-id: restaurant-command-group
+      bootstrap-servers: localhost:9092
