--- a/drestaurant-apps/pom.xml
+++ b/drestaurant-apps/pom.xml
@@ -20,7 +20,7 @@
         <module>drestaurant-monolith-rest</module>
         <module>drestaurant-monolith-websockets</module>
         <module>drestaurant-microservices</module>
-
+        <module>drestaurant-microservices-rest</module>
     </modules>
 
     <build>
