--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-courier/pom.xml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-courier/pom.xml
@@ -24,6 +24,14 @@
             <artifactId>axon-kafka</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-distributed-commandbus-springcloud</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.pivotal.spring.cloud</groupId>
+            <artifactId>spring-cloud-services-starter-service-registry</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
