--- a/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-customer/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices/drestaurant-microservices-command-customer/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8082
 spring:
+  application:
+    name: command-customer
   datasource:
     url: jdbc:h2:mem:restaurant-customer
   jpa:
@@ -26,3 +28,7 @@ axon:
     consumer:
       group-id: customer-command-group
       bootstrap-servers: localhost:9092
+  distributed:
+    spring-cloud:
+      fallback-to-http-get: false
+    enabled: true
