--- a/drestaurant-libs/drestaurant-common/pom.xml
+++ b/drestaurant-libs/drestaurant-common/pom.xml
@@ -41,6 +41,15 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
