--- a/drestaurant-libs/drestaurant-common/pom.xml
+++ b/drestaurant-libs/drestaurant-common/pom.xml
@@ -6,8 +6,8 @@
     <artifactId>drestaurant-common</artifactId>
     <packaging>jar</packaging>
 
-    <name>drestaurant-libs-common</name>
-    <description>common</description>
+    <name>libs-common</name>
+    <description>Common - Events, Commands, Queries - API</description>
 
     <properties>
         <kotlin.version>1.2.41</kotlin.version>
