--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>drestaurant-backend (parent)</name>
-    <description>d-restaurant backend monorepo - Parent</description>
+    <name>parent</name>
+    <description>Main parent pom</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
