--- a/drestaurant-apps/drestaurant-microservices-rest-2/drestaurant-microservices-rest-2-query/pom.xml
+++ b/drestaurant-apps/drestaurant-microservices-rest-2/drestaurant-microservices-rest-2-query/pom.xml
@@ -67,5 +67,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+        <dependency>
+            <!--
+               reactor-core is needed for subscription queries
+               when using Spring Boot 2.0, you'll automatically get reactor-core 3.1, which is fine
+               if you're on Spring Boot 1.5, you would get 2.x, which doesn't work, so you would have to manually set version 3.1
+             -->
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
