--- a/drestaurant-libs/drestaurant-core-api/pom.xml
+++ b/drestaurant-libs/drestaurant-core-api/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>drestaurant-common</artifactId>
+    <artifactId>drestaurant-core-api</artifactId>
     <packaging>jar</packaging>
 
-    <name>libs-common</name>
-    <description>Common - Events, Commands, Queries - API</description>
+    <name>libs-core-api</name>
+    <description>Core API - Events and Commands</description>
 
     <parent>
         <groupId>com.drestaurant</groupId>
