--- a/drestaurant-libs/drestaurant-order/pom.xml
+++ b/drestaurant-libs/drestaurant-order/pom.xml
@@ -48,5 +48,10 @@
             <artifactId>kotlin-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit4</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
